--- a/LSFit/src/main/resources/templates/Create/CreateExercicio.html
+++ b/LSFit/src/main/resources/templates/Create/CreateExercicio.html
@@ -59,7 +59,7 @@
             </div>
             <div class="form-group">
                 <label for="tempoDescanso">Tempo de Descanso (em segundos):</label>
-                <input type="number" id="tempoDescanso" name="tempDescanso" class="form-control" required>
+                <input type="number" id="tempoDescanso" name="tempoDescanso" class="form-control" required>
             </div>
             <div class="form-group">
                 <label for="maquina">Máquina:</label>
