--- a/LSFit/src/main/resources/templates/Read/ReadMaquina.html
+++ b/LSFit/src/main/resources/templates/Read/ReadMaquina.html
@@ -5,6 +5,27 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lista de Pessoas - GymBD</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+    <style>
+
+        body {
+            display: flex;
+            flex-direction: column;
+            min-height: 100vh;
+        }
+
+
+        main {
+            flex: 1;
+        }
+
+
+        footer {
+            position: fixed;
+            bottom: 0;
+            width: 100%;
+            text-align: center;
+        }
+    </style>
 </head>
 <body>
 
@@ -52,18 +73,16 @@
                     <th>Nome</th>
                     <th>Data de Manutencao</th>
                     <th>Ações</th>
-
-                    
-                    
                 </tr>
             </thead>
             <tbody>
                 <tr th:each="maquina : ${maquinas}">
-                    <td th:text="${maquina.pkIdMaquina}"></td> <!-- ID da Pessoa -->
+                    <td th:text="${maquina.pkIdMaquina}"></td> <!-- ID da Maquina -->
                     <td th:text="${maquina.nomeMaquina}"></td> <!-- Nome -->
-                    <td th:text="${maquina.dataManutencao}"></td> <!-- Nome -->
+                    <td th:text="${maquina.dataManutencao}"></td> <!-- Data de Manutenção -->
                     <td>
                         <a class="btn btn-info" th:href="@{/maquina/deletar/{id}(id=${maquina.pkIdMaquina})}">Deletar</a>
+                        <a class="btn btn-info" th:href="@{/maquina/form/{id}(id=${maquina.pkIdMaquina})}">Atualizar</a>
                     </td>
                 </tr>
             </tbody>
