--- a/LSFit/src/main/resources/templates/Read/ReadAluno.html
+++ b/LSFit/src/main/resources/templates/Read/ReadAluno.html
@@ -6,7 +6,7 @@
     <title>Lista de Alunos - GymBD</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
 </head>
-<body>
+<body class="d-flex flex-column min-vh-100">
 
 <header class="bg-primary text-white p-3">
     <h1 class="text-center">Lista de Alunos</h1>
@@ -42,7 +42,7 @@
         </ul>
     </div>
 </nav>
-<main class="container mt-5">
+<main class="container mt-5 flex-grow-1">
     <div class="table-responsive">
         <table class="table table-bordered">
             <thead class="thead-dark">
@@ -55,30 +55,28 @@
                     <th>Rua</th>
                     <th>Bairro</th>
                     <th>Número</th>
-					<th>Cep</th>
+                    <th>Cep</th>
                     <th>Duração em Meses</th>
-					<th>Preço</th>
+                    <th>Preço</th>
                     <th>Ações</th>
-
-
-                    
                 </tr>
             </thead>
             <tbody>
                 <tr th:each="aluno : ${alunos}">
-                    <td th:text="${aluno.pkIdPessoa}"></td> <!-- ID da Pessoa -->
-                    <td th:text="${aluno.nomePessoa}"></td> <!-- Nome -->
-                    <td th:text="${aluno.cpfPessoa}"></td> <!-- CPF -->
-                    <td th:text="${aluno.telefone1Pessoa}"></td> <!-- Telefone 1 -->
-                    <td th:text="${aluno.telefone2Pessoa}"></td> <!-- Telefone 2 -->
-                    <td th:text="${aluno.endereco.rua}"></td> <!-- Rua do Endereco -->
-                    <td th:text="${aluno.endereco.bairro}"></td> <!-- Bairro do Endereco -->
-                    <td th:text="${aluno.endereco.numero}"></td> <!-- Número do Endereco -->
-                    <td th:text="${aluno.endereco.cep}"></td> <!-- CEP do Endereco -->
-					<td th:text="${aluno.plano.duracaoEmMeses}"></td> <!-- Número do Endereco -->
-                    <td th:text="${aluno.plano.preco}"></td> <!-- CEP do Endereco -->
+                    <td th:text="${aluno.pkIdPessoa}"></td>
+                    <td th:text="${aluno.nomePessoa}"></td>
+                    <td th:text="${aluno.cpfPessoa}"></td>
+                    <td th:text="${aluno.telefone1Pessoa}"></td>
+                    <td th:text="${aluno.telefone2Pessoa}"></td>
+                    <td th:text="${aluno.endereco.rua}"></td>
+                    <td th:text="${aluno.endereco.bairro}"></td>
+                    <td th:text="${aluno.endereco.numero}"></td>
+                    <td th:text="${aluno.endereco.cep}"></td>
+                    <td th:text="${aluno.plano.duracaoEmMeses}"></td>
+                    <td th:text="${aluno.plano.preco}"></td>
                     <td>
                         <a class="btn btn-info" th:href="@{/aluno/deletar/{id}(id=${aluno.pkIdPessoa})}">Deletar</a>
+                        <a class="btn btn-info" th:href="@{/aluno/form/{id}(id=${aluno.pkIdPessoa})}">Atualizar</a>
                     </td>
                 </tr>
             </tbody>
@@ -87,7 +85,7 @@
     </div>
 </main>
 
-<footer class="bg-dark text-white text-center p-3 mt-5">
+<footer class="bg-dark text-white text-center p-3 mt-auto">
     <p>&copy; 2024 GymBD. Todos os direitos reservados.</p>
 </footer>
 
