--- a/LSFit/src/main/resources/templates/Read/ReadExercicio.html
+++ b/LSFit/src/main/resources/templates/Read/ReadExercicio.html
@@ -6,7 +6,7 @@
     <title>Lista de Exercícios - GymBD</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
 </head>
-<body>
+<body class="d-flex flex-column min-vh-100">
 
 <header class="bg-primary text-white p-3">
     <h1 class="text-center">Lista de Exercícios</h1>
@@ -43,7 +43,7 @@
     </div>
 </nav>
 
-<main class="container mt-5">
+<main class="container mt-5 flex-grow-1">
     <div class="table-responsive">
         <table class="table table-bordered">
             <thead class="thead-dark">
@@ -54,7 +54,6 @@
                     <th>Nome da Máquina</th>
                     <th>Tempo de Descanso (segundos)</th>
                     <th>Ações</th>
-
                 </tr>
             </thead>
             <tbody>
@@ -66,6 +65,7 @@
                     <td th:text="${exercicio.tempoDescanso}"></td> <!-- Tempo de Descanso -->
                     <td>
                          <a class="btn btn-info" th:href="@{/exercicio/deletar/{id}(id=${exercicio.nomeExercicio})}">Deletar</a>
+                         <a class="btn btn-info" th:href="@{/exercicio/form/{id}(id=${exercicio.nomeExercicio})}">Atualizar</a>
                     </td>
                 </tr>
             </tbody>
@@ -74,7 +74,7 @@
     </div>
 </main>
 
-<footer class="bg-dark text-white text-center p-3 mt-5">
+<footer class="bg-dark text-white text-center p-3 mt-auto">
     <p>&copy; 2024 GymBD. Todos os direitos reservados.</p>
 </footer>
 
