--- a/LSFit/src/main/resources/templates/Read/ReadFichaExercicio.html
+++ b/LSFit/src/main/resources/templates/Read/ReadFichaExercicio.html
@@ -6,7 +6,7 @@
     <title>Visualizar Ficha de Exercício - GymBD</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
 </head>
-<body>
+<body class="d-flex flex-column min-vh-100">
 
 <header class="bg-primary text-white p-3">
     <h1 class="text-center">Detalhes da Ficha de Exercício</h1>
@@ -43,7 +43,7 @@
     </div>
 </nav>
 
-<main class="container mt-5">
+<main class="container mt-5 flex-grow-1">
     <!-- Aluno -->
     <div class="mb-4">
         <h2>Aluno</h2>
@@ -69,7 +69,6 @@
                     <th>Repetições</th>
                     <th>Tempo de Descanso (s)</th>
                     <th>Ações</th>
-
                 </tr>
             </thead>
             <tbody>
@@ -78,7 +77,6 @@
                     <td th:text="${exercicio.series}"></td>
                     <td th:text="${exercicio.numeroDeRepeticoes}"></td>
                     <td th:text="${exercicio.tempoDescanso}"></td>
-                    
                 </tr>
             </tbody>
         </table>
@@ -88,7 +86,7 @@
     <a href="/ficha-exercicio/form" class="btn btn-secondary">Voltar para o Formulário</a>
 </main>
 
-<footer class="bg-dark text-white text-center p-3 mt-5">
+<footer class="bg-dark text-white text-center p-3 mt-auto">
     <p>&copy; 2024 GymBD. Todos os direitos reservados.</p>
 </footer>
 
