--- a/LSFit/src/main/resources/templates/Read/ReadFichas.html
+++ b/LSFit/src/main/resources/templates/Read/ReadFichas.html
@@ -6,7 +6,7 @@
     <title>Listar Fichas de Exercício - GymBD</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
 </head>
-<body>
+<body class="d-flex flex-column min-vh-100">
 
 <header class="bg-primary text-white p-3">
     <h1 class="text-center">Fichas de Exercício</h1>
@@ -43,7 +43,7 @@
     </div>
 </nav>
 
-<main class="container mt-5">
+<main class="container mt-5 flex-grow-1">
     <div class="table-responsive">
         <table class="table table-bordered">
             <thead class="thead-dark">
@@ -60,6 +60,7 @@
                     <td>
                         <a class="btn btn-info" th:href="@{/ficha/{id}(id=${ficha.pkIdFichaDeTreino})}">Ver Mais</a>
                         <a class="btn btn-info" th:href="@{/ficha/deletar/{id}(id=${ficha.pkIdFichaDeTreino})}">Deletar</a>
+                        <a class="btn btn-info" th:href="@{/ficha/form/{id}(id=${ficha.pkIdFichaDeTreino})}">Atualizar</a>
                     </td>
                 </tr>
             </tbody>
@@ -68,7 +69,7 @@
     </div>
 </main>
 
-<footer class="bg-dark text-white text-center p-3 mt-5">
+<footer class="bg-dark text-white text-center p-3 mt-auto">
     <p>&copy; 2024 GymBD. Todos os direitos reservados.</p>
 </footer>
 
