--- a/LSFit/src/main/resources/templates/Read/ReadUnidade.html
+++ b/LSFit/src/main/resources/templates/Read/ReadUnidade.html
@@ -6,11 +6,12 @@
     <title>Lista de Unidades - GymBD</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
 </head>
-<body>
+<body class="d-flex flex-column min-vh-100">
 
 <header class="bg-primary text-white p-3">
     <h1 class="text-center">Lista de Unidades</h1>
 </header>
+
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <a class="navbar-brand" href="/">LSFit</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -43,7 +44,7 @@
     </div>
 </nav>
 
-<main class="container mt-5">
+<main class="container mt-5 flex-grow-1">
     <div class="table-responsive">
         <table class="table table-bordered">
             <thead class="thead-dark">
@@ -56,21 +57,20 @@
                     <th>Número</th>
                     <th>CEP</th>
                     <th>Ações</th>
-
-                    
                 </tr>
             </thead>
             <tbody>
                 <tr th:each="unidade : ${unidades}">
-                    <td th:text="${unidade.pkIdUnidade}"></td> <!-- ID da Unidade -->
-                    <td th:text="${unidade.telefone1Unidade}"></td> <!-- Telefone 1 -->
-                    <td th:text="${unidade.telefone2Unidade}"></td> <!-- Telefone 2 -->
-                    <td th:text="${unidade.rua}"></td> <!-- Rua do Endereco -->
-                    <td th:text="${unidade.bairro}"></td> <!-- Bairro do Endereco -->
-                    <td th:text="${unidade.numero}"></td> <!-- Número do Endereco -->
-                    <td th:text="${unidade.cep}"></td> <!-- CEP do Endereco -->
+                    <td th:text="${unidade.pkIdUnidade}"></td> 
+                    <td th:text="${unidade.telefone1Unidade}"></td> 
+                    <td th:text="${unidade.telefone2Unidade}"></td> 
+                    <td th:text="${unidade.rua}"></td> 
+                    <td th:text="${unidade.bairro}"></td> 
+                    <td th:text="${unidade.numero}"></td> 
+                    <td th:text="${unidade.cep}"></td> 
                     <td>
                         <a class="btn btn-info" th:href="@{/unidade/cancelar/{id}(id=${unidade.pkIdUnidade})}">Deletar</a>
+                        <a class="btn btn-info" th:href="@{/unidade/form/{id}(id=${unidade.pkIdUnidade})}">Atualizar</a>
                     </td>
                 </tr>
             </tbody>
@@ -79,11 +79,8 @@
     </div>
 </main>
 
-<footer class="bg-dark text-white text-center p-3 mt-5">
+<footer class="bg-dark text-white text-center p-3 mt-auto">
     <p>&copy; 2024 GymBD. Todos os direitos reservados.</p>
-    
-        
-    
 </footer>
 
 </body>
