--- a/LSFit/src/main/resources/templates/Update/UpdateExercicio.html
+++ b/LSFit/src/main/resources/templates/Update/UpdateExercicio.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cadastro de Aluno - LSFit</title>
+    <title>Atualizar Exercício - LSFit</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
 </head>
 <body>
     <header class="bg-primary text-white p-3">
-        <h1 class="text-center">Cadastro de Aluno</h1>
+        <h1 class="text-center">Atualizar Exercício</h1>
     </header>
 
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
@@ -44,53 +44,34 @@
     </nav>
 
     <main class="container mt-5">
-        <form action="/aluno/salvar" method="post" class="bg-light p-4 rounded shadow">
+        <form th:action="@{/exercicio/atualizar/{name}(name=${exercicio.nomeExercicio})}" method="post" class="bg-light p-4 rounded shadow">
             <div class="form-group">
-                <label for="cpfPessoa">CPF:</label>
-                <input type="text" id="cpfPessoa" name="cpfPessoa" class="form-control" required>
+                <label for="nomeExercicio">Nome do Exercício:</label>
+                <input type="text" id="nomeExercicio" name="nomeExercicio" class="form-control" required>
             </div>
             <div class="form-group">
-                <label for="nomePessoa">Nome:</label>
-                <input type="text" id="nomePessoa" name="nomePessoa" class="form-control" required>
+                <label for="series">Séries:</label>
+                <input type="number" id="series" name="series" class="form-control" required>
             </div>
             <div class="form-group">
-                <label for="telefone1Pessoa">Telefone 1:</label>
-                <input type="text" id="telefone1Pessoa" name="telefone1Pessoa" class="form-control">
+                <label for="repeticoes">Repetições:</label>
+                <input type="number" id="repeticoes" name="numeroDeRepeticoes" class="form-control" required>
             </div>
             <div class="form-group">
-                <label for="telefone2Pessoa">Telefone 2:</label>
-                <input type="text" id="telefone2Pessoa" name="telefone2Pessoa" class="form-control">
+                <label for="tempoDescanso">Tempo de Descanso (em segundos):</label>
+                <input type="number" id="tempoDescanso" name="tempoDescanso" class="form-control" required>
             </div>
             <div class="form-group">
-                <label for="cep">CEP:</label>
-                <input type="text" id="cep" name="cep" class="form-control">
+                <label for="maquina">Máquina:</label>
+                <select name="maquinaId" id="maquina" class="form-control">
+                    <option value="" disabled selected>Selecione a Máquina</option>
+                    <!-- Exibe as máquinas disponíveis -->
+                    <th:block th:each="maquina : ${maquinas}">
+                        <option th:value="${maquina.pkIdMaquina}" th:text="${maquina.nomeMaquina}"></option>
+                    </th:block>
+                </select>
             </div>
-            <div class="form-group">
-                <label for="bairro">Bairro:</label>
-                <input type="text" id="bairro" name="bairro" class="form-control">
-            </div>
-            <div class="form-group">
-                <label for="rua">Rua:</label>
-                <input type="text" id="rua" name="rua" class="form-control">
-            </div>
-            <div class="form-group">
-                <label for="numero">Número:</label>
-                <input type="text" id="numero" name="numero" class="form-control">
-            </div>
-            <h3>Sobre o Plano</h3>
-            <div class="form-group">
-                <label for="preco">Preço:</label>
-                <input type="text" id="preco" name="preco" class="form-control" required>
-            </div>
-            <div class="form-group">
-                <label for="duracaoEmMeses">Duração (meses):</label>
-                <input type="number" id="duracaoEmMeses" name="duracaoEmMeses" class="form-control" required>
-            </div>
-            <div class="form-group">
-                <label for="unidadeId">Id da Unidade:</label>
-                <input type="number" id="unidadeId" name="unidadeId" class="form-control" required>
-            </div>
-            <button type="submit" class="btn btn-primary btn-block">Salvar</button>
+            <button type="submit" class="btn btn-primary btn-block">Salvar Exercício</button>
         </form>
     </main>
 
