--- a/LSFit/src/main/resources/templates/Update/UpdateMaquina.html
+++ b/LSFit/src/main/resources/templates/Update/UpdateMaquina.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Atualizar Aluno - LSFit</title>
+    <title>Update de Máquina - LSFit</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
 </head>
 <body>
     <header class="bg-primary text-white p-3">
-        <h1 class="text-center">Atualizar Aluno</h1>
+        <h1 class="text-center">Update de Máquina</h1>
     </header>
 
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
@@ -44,51 +44,21 @@
     </nav>
 
     <main class="container mt-5">
-        <!-- O método do formulário foi alterado para POST, e a URL agora é /instrutor/atualizar/{id} -->
-        <form th:action="@{/aluno/atualizar/{id}(id=${aluno.pkIdPessoa})}" method="post" class="bg-light p-4 rounded shadow">
-            <h3>Dados Pessoais</h3>
+        <form th:action="@{/maquina/atualizar/{id}(id=${maquina.pkIdMaquina})}" method="post" class="bg-light p-4 rounded shadow">
             <div class="form-group">
-                <label for="cpfPessoa">CPF:</label>
-                <input type="text" id="cpfPessoa" name="cpfPessoa" class="form-control" required>
+                <label for="nomeMaquina">Nome da Máquina:</label>
+                <input type="text" id="nomeMaquina" name="nomeMaquina" class="form-control" required>
             </div>
+            
             <div class="form-group">
-                <label for="nomePessoa">Nome:</label>
-                <input type="text" id="nomePessoa" name="nomePessoa" class="form-control" required>
+                <label for="dataManutencao">Data de Manutenção:</label>
+                <input type="date" id="dataManutencao" name="dataManutencao" class="form-control">
             </div>
-            <div class="form-group">
-                <label for="telefone1Pessoa">Telefone 1:</label>
-                <input type="text" id="telefone1Pessoa" name="telefone1Pessoa" class="form-control">
+
+            <div class="form-group d-flex justify-content-between">
+                <button type="submit" class="btn btn-primary">Salvar</button>
+                <a href="/maquina/listar" class="btn btn-secondary">Voltar para a Lista</a>
             </div>
-            <div class="form-group">
-                <label for="telefone2Pessoa">Telefone 2:</label>
-                <input type="text" id="telefone2Pessoa" name="telefone2Pessoa" class="form-control">
-            </div>
-            <div class="form-group">
-                <label for="cep">CEP:</label>
-                <input type="text" id="cep" name="cep" class="form-control">
-            </div>
-            <div class="form-group">
-                <label for="bairro">Bairro:</label>
-                <input type="text" id="bairro" name="bairro" class="form-control">
-            </div>
-            <div class="form-group">
-                <label for="rua">Rua:</label>
-                <input type="text" id="rua" name="rua" class="form-control">
-            </div>
-            <div class="form-group">
-                <label for="numero">Número:</label>
-                <input type="text" id="numero" name="numero" class="form-control">
-            </div>
-            <h3>Sobre o Plano</h3>
-            <div class="form-group">
-                <label for="preco">Preço:</label>
-                <input type="text" id="preco" name="preco" class="form-control" required>
-            </div>
-            <div class="form-group">
-                <label for="unidadeId">Id da Unidade:</label>
-                <input type="number" id="unidadeId" name="unidadeId" class="form-control" required>
-            </div>
-            <button type="submit" class="btn btn-primary btn-block">Salvar Exercício</button>
         </form>
     </main>
 
